--- a/weather_app/public/index.html
+++ b/weather_app/public/index.html
@@ -14,6 +14,6 @@
 
     <div id="result"></div>
 
-    <script src="main.js"></script>
+    <script src="/weather_app/src/main.js"></script>
 </body>
 </html>
