--- a/weather_app/public/index.html
+++ b/weather_app/public/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
+    <link rel="stylesheet" href="/weather_app/src/styles/main.css">
 </head>
 <body>
-    <h1>Check the Temperature</h1>
-    <form id="weatherForm">
-        <input type="text" id="cityInput" placeholder="Enter city name" required/>
-        <button type="submit">Get Weather</button>
-    </form>
+  <h1>Simple Weather App</h1>
 
-    <div id="result"></div>
+  <label for="cityInput">Enter a city:</label><br>
+  <input type="text" id="cityInput" placeholder="e.g. Paris">
+  <br>
+  <button onclick="getWeather()">Get Weather</button>
+
+  <div id="result"></div>
 
     <script src="/weather_app/src/main.js"></script>
 </body>
 </html>
+
+  
