Revised files from AI response
Revised html, css, javascript files to replace code with code from my prompt using the TRACI framework.
Prompt "Create a beginner-friendly JavaScript function code for a weather app that will take input from the form and display the current weather. The function should be able to fetch the latitude and longitude coordinates from the API from Open-Meteo API (using the current version) using the city from the input and then convert them to list the city and weather. The code should include comments to understand what is being done and why. Code should also have error handling, be readable, and follow JavaScript best practices."

--- a/weather_app/public/index.html
+++ b/weather_app/public/index.html
@@ -7,16 +7,18 @@
     <link rel="stylesheet" href="/weather_app/src/styles/main.css">
 </head>
 <body>
-  <h1>Simple Weather App</h1>
+  <h1>Weather App</h1>
 
-  <label for="cityInput">Enter a city:</label><br>
-  <input type="text" id="cityInput" placeholder="e.g. Paris">
-  <br>
-  <button onclick="getWeather()">Get Weather</button>
-
-  <div id="result"></div>
-
-    <script src="/weather_app/src/main.js"></script>
+  // This form allows the user to input a city name and fetch the weather data
+  <form id="weatherForm">
+    <label for="city">Enter City Name:</label><br>
+    <input type="text" id="city" name="city" required>
+    <button type="submit">Get Weather</button>
+  </form>
+ 
+  <div id="weatherResult"></div>
+  
+  <script src="/weather_app/src/main.js"></script>
 </body>
 </html>
 
