--- a/weather_app/public/index.html
+++ b/weather_app/public/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Weather App</h1>
 
-  // This form allows the user to input a city name and fetch the weather data
+  <!-- This form allows the user to input a city name and fetch the weather data -->
   <form id="weatherForm">
     <label for="city">Enter City Name:</label><br>
     <input type="text" id="city" name="city" required>
@@ -17,7 +17,7 @@
   </form>
  
   <div id="weatherResult"></div>
-  
+
   <script src="/weather_app/src/main.js"></script>
 </body>
 </html>
