--- a/weather_app/public/index.html
+++ b/weather_app/public/index.html
@@ -18,7 +18,7 @@
  
   <div id="weatherResult"></div>
 
-  <script src="/weather_app/src/main.js"></script>
+  <script type="module" src="/weather_app/src/main.js"></script>
 </body>
 </html>
 
