--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="../src/styles/main.css">
 </head>
 <body>
-  <h1>Weather App</h1>
-
-  <!-- This form allows the user to input a city name and fetch the weather data -->
-  <form id="weatherForm">
-    <label for="city">Enter City Name:</label><br>
-    <input type="text" id="city" name="city" required>
-    <button type="submit">Get Weather</button>
-  </form>
- 
-  <div id="weatherResult"></div>
-
+  <div class="container">
+    <h1>Weather App</h1>
+    <!-- This form allows the user to input a city name and fetch the weather data -->
+    <form id="weatherForm">
+      <label for="city">Enter City Name:</label><br>
+      <input type="text" id="city" name="city" required>
+      <button type="submit">Get Weather</button>
+    </form>
+  
+    <div id="weatherResult"></div>
+  </div>  
   <script type="module" src="../src/main.js"></script>
 </body>
 </html>
