--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src https://api.open-meteo.com https://geocoding-api.open-meteo.com; script-src 'self'; style-src 'self';">
     <title>Weather App</title>
     <link rel="stylesheet" href="../src/styles/main.css">
 </head>
