--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <h1>Weather App</h1>
     <!-- This form allows the user to input a city name and fetch the weather data -->
     <form id="weatherForm">
-      <label for="city">Enter City Name:</label><br>
+      <label for="city">Enter City Name:</label>
       <input type="text" id="city" name="city" required>
       <button type="submit">Get Weather</button>
     </form>
@@ -23,6 +23,7 @@
     </section>
 
   </div>  
+
   <script type="module" src="../src/main.js"></script>
 </body>
 </html>
