--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src https://api.open-meteo.com https://geocoding-api.open-meteo.com; script-src 'self'; style-src 'self';">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <title>Weather App</title>
     <link rel="stylesheet" href="../src/styles/main.css">
 </head>
@@ -14,12 +15,12 @@
     <form id="weatherForm">
       <label for="city">Enter City Name:</label>
       <input type="text" id="city" name="city" required>
-      <button type="submit">Get Weather</button>
+      <button type="submit" class="full-width">Get Weather</button>
     </form>
     
     <section id="weatherContainer" aria-live="polite">
       <div id="weatherResult" role="region" aria-label="Weather Information"></div>
-      <button id="clearBtn" aria-label="Clear Weather Result">Clear</button>
+      <button type="button" id="clearBtn" class="full-width" aria-label="Clear Weather Result">Clear</button>
     </section>
 
   </div>  
