--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src https://api.open-meteo.com https://geocoding-api.open-meteo.com; script-src 'self'; style-src 'self';">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <title>Weather App</title>
+    <title>Mood of the City</title>
     <link rel="stylesheet" href="../src/styles/main.css">
 </head>
 <body>
   <div class="container">
-    <h1>Weather App</h1>
+    <h1>Mood of the City: Weather App</h1>
     <!-- This form allows the user to input a city name and fetch the weather data -->
     <form id="weatherForm">
       <label for="city">Enter City Name:</label>
