--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src https://api.open-meteo.com https://geocoding-api.open-meteo.com; script-src 'self'; style-src 'self';">
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src https://api.open-meteo.com https://geocoding-api.open-meteo.com; script-src 'self'; style-src 'self';"> -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <title>Mood of the City</title>
     <link rel="stylesheet" href="../src/styles/main.css">
@@ -18,6 +18,8 @@
       <button type="submit" class="full-width">Get Weather</button>
     </form>
     
+    <p id="error" style="color: red; display: none;"></p>
+
     <section id="weatherContainer" aria-live="polite">
       <div id="weatherResult" role="region" aria-label="Weather Information"></div>
       <button type="button" id="clearBtn" class="full-width" aria-label="Clear Weather Result">Clear</button>
